<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/custom_tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar_activity"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/text_margin_top"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/created_by"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/text_margin_top"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/about_github"
        android:layout_width="wrap_content"
        android:text="@string/github"
        android:layout_marginTop="@dimen/text_margin_top"
        android:layout_gravity="center"
        android:fontFamily="@font/proxinova_regular"
        app:chipIcon="@drawable/ic_about_github"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_start"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_text"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_end"
        android:textAppearance="?android:attr/textAppearanceMedium"/>



</LinearLayout>