<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="4dp"
        android:backgroundTint="@color/black">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/dialog_sample_quote"/>

            <TextView
                android:id="@+id/seek_bar_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="end"
                android:layout_below="@id/text_seekbar"
                android:layout_alignEnd="@id/text_seekbar"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/quote_by"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="30dp"
                android:text="@string/opacity" />
        </LinearLayout>

        <com.nakul.widget.ColorSeekBar
            android:id="@+id/color_seek_bar"
            android:layout_width="250dp"
            app:showAlphaBar="true"
            app:barHeight="10dp"
            app:barRadius="10dp"
            app:colorSeeds="@array/material_colors"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <View
            android:id="@+id/color_preview"
            android:layout_width="100dp"
            android:layout_marginTop="10dp"
            android:layout_height="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_dialog"
                android:textColor="@color/white"
                style="?attr/buttonStyleSmall"/>

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textColor="@color/white"
                android:layout_marginEnd="10dp"
                style="?attr/buttonStyleSmall"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>