<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SettingsActivity">

    <include
        android:id="@+id/setting_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/toolbar_activity"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:backgroundTint="@color/white"
        android:background="@color/white">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ViewCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/quote_preview_text"
                    style="@style/QuotePreview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/quote_author_text"
                    style="@style/AuthorPreview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_end"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginStart="@dimen/margin_start"
            android:textStyle="bold"
            android:text="@string/widget_will_update_in_every_2_hours"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.50dp"
        android:layout_marginTop="10dp"
        android:background="@color/cardview_dark_background"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Description"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginEnd="@dimen/margin_end"
                android:scrollbars="horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    style="@style/Quote"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="horizontal"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/text_size_spin"
                        android:layout_width="200dp"
                        android:layout_gravity="end"
                        android:layout_marginTop="13dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:scrollbars="horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Author"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="horizontal"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/author_size_spin"
                        android:layout_width="200dp"
                        android:spinnerMode="dropdown"
                        android:layout_gravity="end"
                        android:layout_marginTop="13dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.50dp"
                android:layout_marginTop="15dp"
                android:background="@color/cardview_dark_background"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                style="@style/DescriptionOne"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginEnd="@dimen/margin_end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    style="@style/QuoteOne"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/quote_style_spin"
                        android:layout_width="200dp"
                        android:spinnerMode="dropdown"
                        android:layout_gravity="end"
                        android:layout_marginTop="13dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:fontFamily="@font/proxinova_bold"
                    android:layout_marginTop="16dp"
                    android:text="@string/quote_author_style"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/author_text_style"
                        android:layout_width="200dp"
                        android:spinnerMode="dropdown"
                        android:layout_gravity="end"
                        android:layout_marginTop="13dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.50dp"
                android:layout_marginTop="10dp"
                android:background="@color/cardview_dark_background"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/change_the_fq"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/proxinova_regular"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:fontFamily="@font/proxinova_bold"
                    android:layout_marginTop="16dp"
                    android:text="@string/change_quote_font"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/quote_font"
                        android:layout_width="200dp"
                        android:spinnerMode="dropdown"
                        android:layout_gravity="end"
                        android:layout_marginTop="13dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:fontFamily="@font/proxinova_bold"
                    android:layout_marginTop="16dp"
                    android:text="@string/change_author_font"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/author_font"
                        android:layout_width="200dp"
                        android:spinnerMode="dropdown"
                        android:layout_gravity="end"
                        android:layout_marginTop="13dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.50dp"
                android:layout_marginTop="10dp"
                android:background="@color/cardview_dark_background"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/change_ag_pos"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/proxinova_regular"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:fontFamily="@font/proxinova_bold"
                    android:layout_marginTop="16dp"
                    android:text="@string/quote_alignment"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/quote_alignment_spin"
                        android:layout_width="200dp"
                        android:spinnerMode="dropdown"
                        android:layout_gravity="end"
                        android:layout_marginTop="13dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/proxinova_bold"
                    android:text="@string/author_text"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/author_alignment_spin"
                        android:layout_width="200dp"
                        android:spinnerMode="dropdown"
                        android:layout_gravity="end"
                        android:layout_marginTop="13dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.50dp"
                android:layout_marginTop="10dp"
                android:background="@color/cardview_dark_background"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/set_language"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/proxinova_regular"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:fontFamily="@font/proxinova_bold"
                    android:layout_marginTop="16dp"
                    android:text="@string/set_language_q"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/set_quote_language"
                        android:layout_width="200dp"
                        android:spinnerMode="dropdown"
                        android:layout_gravity="end"
                        android:layout_marginTop="13dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.50dp"
                android:layout_marginTop="10dp"
                android:background="@color/cardview_dark_background"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/set_color"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/proxinova_regular"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:paddingBottom="30dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:fontFamily="@font/proxinova_bold"
                    android:layout_marginTop="16dp"
                    android:text="@string/select_color"/>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">

                   <Button
                       android:id="@+id/choose_color"
                       android:layout_width="190dp"
                       android:layout_height="wrap_content"
                       android:layout_gravity="end"
                       android:gravity="start"
                       android:paddingTop="10dp"
                       android:backgroundTint="@color/blue_700"
                       android:layout_marginEnd="10dp"
                       android:text="@string/select_color"
                       android:textAppearance="?android:attr/textAppearanceSmall" />

               </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:backgroundTint="@color/blue_700"
                android:text="@string/apply_setting"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
